argocd/app_of_apps/network/ingressroutes/argocd_ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.local.001083.xyz`)
      kind: Rule
      services:
        - name: argocd-server
          namespace: argocd
          kind: Service
          port: 443
  tls:
   secretName: local-001083-xyz-tls
