argocd/app_of_apps/network/ingressroutes/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.local.001083.xyz`)
      kind: Rule
      services:
        - name: grafana
          namespace: monitoring
          kind: Service
          port: 80
  tls:
   secretName: local-001083-xyz-tls-prod
