argocd/app_of_apps/network/ingressroutes/keycloak_ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.local.001083.xyz`)
      kind: Rule
      services:
        - name: authentik-app-server
          namespace: authentik
          kind: Service
          port: 443
  tls:
    secretName: local-001083-xyz-tls-prod
