argocd/app_of_apps/network/ingressroutes/longhorn-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:

    - websecure
  routes:
    - match: Host(`longhorn.local.001083.xyz`)
      kind: Rule
      services:
        - name: longhorn-frontend
          namespace: longhorn-system
          kind: Service
          port: 80
  tls:
   secretName: local-001083-xyz-tls-prod
