argocd/app_of_apps/network/ingressroutes/vault_ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault-ingress
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.local.001083.xyz`)
      kind: Rule
      services:
        - name: vault
          namespace: vault
          kind: Service
          port: 8200
  tls:
    secretName: local-001083-xyz-tls-prod
